--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -47,7 +47,7 @@ jobs:
    - name: Deploy web app
      uses: azure/webapps-deploy@v2
      with:
-       app-name: GitHubApp-@lab.LabInstance.Id
+       app-name: github-yaml-pankaagr
        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
        package: webapp
     
